--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "First Pull",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "#1 Guild on Tich",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kaifel",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-material-ui": "^3.0.0",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
