--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "First Pull",
   "private": true,
-  "description": "#1 Guild on Tich",
+  "description": "Best Guild on Tich",
   "version": "0.1.0",
   "author": "Kaifel",
   "dependencies": {
