--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "First Pull",
+  "name": "firstpull",
   "private": true,
   "description": "Best Guild on Tich",
   "version": "0.1.0",
